--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
-    "@ionic-native/core": "^3.12.1",
-    "@ionic-native/device": "^4.2.1",
-    "@ionic-native/keyboard": "^4.1.0",
+    "@ionic-native/core": "3.12.1",
+    "@ionic-native/device": "4.2.1",
+    "@ionic-native/keyboard": "4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
@@ -44,7 +44,7 @@
     "ionic": "3.19.0",
     "typescript": "2.3.4"
   },
-  "description": "Ionic 3 Start Theme",
+  "description": "PaidYet Mobile App",
   "cordovaPlugins": [],
   "cordovaPlatforms": [],
   "cordova": {
