--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PaidYET Mobile Alpha",
+  "name": "paidyetmobilealpha",
   "version": "0.0.1",
   "author": "DeVaughn Skillern <devaughn@paidyet.com>",
   "homepage": "https://paidyet.com",
@@ -19,11 +19,11 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
-    "@ionic-native/core": "^4.16.0",
+    "@ionic-native/core": "4.16.0",
     "@ionic-native/device": "4.2.1",
-    "@ionic-native/keyboard": "^4.16.0",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
+    "@ionic-native/keyboard": "4.16.0",
+    "@ionic-native/splash-screen": "^4.16.0",
+    "@ionic-native/status-bar": "^4.16.0",
     "@ionic/storage": "2.0.1",
     "cordova-android": "^7.1.1",
     "cordova-ios": "^4.4.0",
@@ -32,10 +32,10 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.2",
-    "ionic-angular": "3.8.0",
+    "ionic-angular": "^3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "rxjs": "^5.5.11",
+    "rxjs": "^5.5.12",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
