--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
+    "@ionic-native/contacts": "^3.14.0",
     "@ionic-native/core": "3.14.0",
     "@ionic-native/device": "4.2.1",
     "@ionic-native/keyboard": "3.10.3",
@@ -28,10 +29,12 @@
     "cordova-android": "6.4.0",
     "cordova-ios": "4.4.0",
     "cordova-plugin-console": "1.1.0",
+    "cordova-plugin-contacts": "3.0.1",
     "cordova-plugin-device": "1.1.6",
     "cordova-plugin-splashscreen": "4.0.3",
     "cordova-plugin-statusbar": "2.2.3",
     "cordova-plugin-whitelist": "1.3.2",
+    "cordova-sqlite-storage": "~2.1.4",
     "hoek": "6.0.2",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "2.2.1",
@@ -39,8 +42,7 @@
     "node-sass": "^4.10.0",
     "rxjs": "5.5.12",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-sqlite-storage": "~2.1.4"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.0",
@@ -58,7 +60,8 @@
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-contacts": {}
     },
     "platforms": [
       "ios",
